# learn-programming-languages

./: .gitignore  CMakeLists.txt  README.md
0.getting_started/: 20230718-books-on-cpp.md
2.intermediate/std/: header.md  standard_library.md
Level 4 - Standard Template Library (STL)/: README.md
cmake/: cpp_modules.cmake
cpp/: .gitignore  CMakeLists.txt  io.md
cpp/cmake/: cpp_modules.cmake
cpp/cpp11/: CMakeLists.txt  cpp11_auto.cpp  cpp11_carries_dependency.cpp  cpp11_chrono.cpp  cpp11_condition_variable.cpp  cpp11_current_exception.cpp  cpp11_decltype.cpp  cpp11_enum.cpp  cpp11_forward.cpp  cpp11_forward_list.cpp  cpp11_future.cpp  cpp11_initializer_list.cpp  cpp11_iota.cpp  cpp11_noexcept.cpp  cpp11_noreturn.cpp  cpp11_nullptr.cpp  cpp11_override.cpp  cpp11_promise.cpp  cpp11_random.cpp  cpp11_ratio.cpp  cpp11_regex.cpp  cpp11_shared_future.cpp  cpp11_shared_ptr.cpp  cpp11_system_error.cpp  cpp11_type_index.cpp  cpp11_unordered_map.cpp  cpp11_unordered_set.cpp  cpp11_using.cpp  cpp11_weak_ptr.cpp
cpp/cpp14/: CMakeLists.txt  cpp14_deprecated.cpp  cpp14_shared_mutex.cpp
cpp/cpp17/: CMakeLists.txt  cpp17_deduction_guides.cpp  cpp17_execution.cpp  cpp17_folding.cpp  cpp17_init_if_switch.cpp  cpp17_memory_resource.cpp  cpp17_string_view.cpp  cpp17_variant.cpp
cpp/cpp20/: CMakeLists.txt  cpp20_barrier.cpp  cpp20_bit_cast.cpp  cpp20_concepts.cpp  cpp20_latch.cpp  cpp20_numbers.cpp  cpp20_ranges_find.cpp  cpp20_source_location.cpp
cpp/cpp20/cpp20_coroutine/: CMakeLists.txt  cpp20_coroutine_generator.cpp
cpp/cpp20/cpp20_module/: math.cpp  math.ixx
cpp/cpp23/: CMakeLists.txt  cpp23_unreachable.cpp
cpp/docs/: 20230707-cppreference-templates.md  20230720_syntax_and_first_program.md
css/: README.md
css/level 1/: align.css  background.css  border.css  float.css  font.css  index.html  list.css  navigation-bar.css  position.css  pseudo.css  selector.css  table.css  text.css
docs/: algorithm.md
html/: README.md
html/asset/data/: table.html
html/level 1/: basic.html  canvas.html  class.html  css.html  favicon.html  form_input.html  formatting.html  id.html  iframe.html  image.html  javascript.html  layout.html  list.html  table.html
html/level 2/: api.html  form.html  multimedia.html  svg.html
js/: README.md
koltin/: README.md  settings.gradle
koltin/app/: build.gradle
koltin/app/src/androidTest/java/com/example/spotit/: ExampleInstrumentedTest.kt
koltin/app/src/main/: AndroidManifest.xml
koltin/app/src/main/java/com/example/spotit/: MainActivity.kt  Splash.kt
koltin/app/src/main/res/layout/: activity_splash.xml
koltin/app/src/main/res/menu/: menu_main.xml
koltin/app/src/main/res/values/: strings.xml  themes.xml
koltin/app/src/main/res/values-night/: themes.xml
koltin/app/src/test/java/com/example/spotit/: ExampleUnitTest.kt
koltin/gradle/wrapper/: gradle-wrapper.properties
level_00_basic/: CMakeLists.txt  README.md
level_00_basic/syntax_and_first_program/: CMakeLists.txt  hello_world.cpp
level_05_cpp11_and_beyond/: CMakeLists.txt  README.md
level_05_cpp11_and_beyond/cpp11/: CMakeLists.txt  GetLastError.cpp  array.cpp  async.cpp  atomic.cpp  bind.cpp  constexpr.cpp  constructor.cpp  default_constructor.cpp  deleted_functions.cpp  getenv.cpp  lambda.cpp  move.cpp  mutex.cpp  packaged_task.cpp  rvalue_references.cpp  template.cpp  thread.cpp  tuple.cpp  unique_ptr.cpp
level_05_cpp11_and_beyond/cpp14/: CMakeLists.txt  make_unique.cpp  thread_count.cpp
level_05_cpp11_and_beyond/cpp17/: CMakeLists.txt  any.cpp  fallthrough.cpp  filesystem.cpp  maybe_unused.cpp  optional.cpp  sample.cpp  structured_bindings.cpp
level_05_cpp11_and_beyond/cpp20/: CMakeLists.txt  likely.cpp  ranges.cpp  span.cpp
level_05_cpp11_and_beyond/cpp20/module/: msvc_core.cpp
level_05_cpp11_and_beyond/cpp23/: CMakeLists.txt  assume.cpp  expected.cpp  stdfloat.cpp
level_09_design_patterns/: CMakeLists.txt  README.md
level_09_design_patterns/adapter/: adapter_device.cpp  adapter_shape.cpp
level_09_design_patterns/bridge/: bridge_control.cpp  bridge_impl.cpp  bridge_report.cpp
level_09_design_patterns/builder/: builder_car.cpp  builder_email.cpp  builder_factory_car.cpp  builder_person.cpp  builder_product.cpp
level_09_design_patterns/command/: command_editor.cpp
level_09_design_patterns/composite/: composite_component.cpp  composite_graphic.cpp
level_09_design_patterns/decorator/: decorator_component.cpp  decorator_data.cpp  decorator_notifier.cpp
level_09_design_patterns/docs/: index.md
level_09_design_patterns/facade/: facade_subsytem.cpp  facade_video.cpp
level_09_design_patterns/factory/: factory_button.cpp  factory_door.cpp  factory_door2.cpp  factory_drink.cpp  factory_funiture.cpp  factory_interview.cpp  factory_object.cpp  factory_vehicle.cpp
level_09_design_patterns/flyweight/: flyweight_character.cpp  flyweight_texture.cpp
level_09_design_patterns/iterator/: iterator_item.cpp
level_09_design_patterns/mediator/: mediator_chat.cpp
level_09_design_patterns/memento/: memento_document.cpp  memento_text_editor.cpp
level_09_design_patterns/observer/: observer_event.cpp  observer_news.cpp  observer_textbox.cpp
level_09_design_patterns/prototype/: prototype_address.cpp  prototype_button.cpp  prototype_window.cpp
level_09_design_patterns/proxy/: proxy_image.cpp  proxy_subject.cpp
level_09_design_patterns/singleton/: singleton_database.cpp  singleton_template.cpp
level_09_design_patterns/state/: state_classic.cpp  state_handmade.cpp  state_machine.cpp  state_traffic_light.cpp  state_traffic_light_1.cpp
level_09_design_patterns/strategy/: strategy_dynamic.cpp  strategy_report.cpp  strategy_sort.cpp  strategy_static.cpp
level_09_design_patterns/template-method/: template_method.cpp
level_09_design_patterns/visitor/: visitor_acyclic.cpp  visitor_double.cpp  visitor_element.cpp  visitor_intrusive.cpp  visitor_reflective.cpp  visitor_std.cpp
level_10_projects/: CMakeLists.txt
tests/: CMakeLists.txt  main.cc
